# katatui

./: Cargo.toml  README.md
src/: app.rs  entry.rs  lib.rs  tui.rs
src/tui/: app.rs  debug.rs  fmt.rs  io.rs  loopr.rs  mod.rs  rgb.rs  runtime.rs  state.rs  tui.rs
